Change the useState and func

--- a/src/components/Stars.css
+++ b/src/components/Stars.css
@@ -2,10 +2,14 @@
     color: gray;
     font-size: 48px;
     border: 2px solid gray;
-    display: inline-block;
+    display: flex;
+    justify-content: center;
     padding: 5px;
+    
 }
-p{
-    color: white;
-    padding: 20px;
+.on{
+    color: yellow;
+}
+.off{
+    color: gray;
 }
