--- a/src/components/Stars.css
+++ b/src/components/Stars.css
@@ -1,10 +1,12 @@
 .stars{
     color: gray;
-    font-size: 48px;
+    
     border: 2px solid gray;
     display: flex;
+    
     justify-content: center;
     padding: 5px;
+     cursor: pointer;
     
 }
 .on{
@@ -12,4 +14,22 @@
 }
 .off{
     color: gray;
+}
+.star{
+    font-size: 48px;
+}
+.rating-result{
+    font-size: 24px;
+    color: gray;
+    
+}
+.thanks{
+    font-size: 24px;
+    text-decoration-line: underline;
+    text-decoration-style: double;
+    text-decoration-color: rgb(165, 165, 26);
+    padding-bottom: 5px;
+    text-underline-offset: 2px;
+    color: gray;
+    
 }
